--- a/frontend/reset.css
+++ b/frontend/reset.css
@@ -1,3 +1,7 @@
+.background-black {
+  background-color: #121212;
+}
+
 html, body {
   height: 100%;
 }
@@ -6,7 +10,7 @@ html, body, header, nav, h1, a,
 ul, li, strong, main, button, i,
 section, img, div, h2, p, form,
 fieldset, label, input, textarea,
-span, article, footer, time, small {
+span, article, footer, time, small, h2 {
   margin: 0;
   padding: 0;
   border: 0;
