--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
 html, body, header {
   height: 100%;
 }
@@ -11,7 +13,7 @@ span, article, footer, time, small {
   padding: 0;
   border: 0;
   outline: 0;
-  font: inherit;
+  font-family: 'Roboto', sans-serif;
   color: white;
   text-align: inherit;
   text-decoration: inherit;
@@ -45,3 +47,4 @@ button,
 input[type="submit"] {
   cursor: pointer;
 }
+
