--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -15,6 +15,8 @@ header {
 
 .header {
   position: relative;
+  // position: fixed; 
+  width: 100vw;
   display: flex;
   background-color: #272727;
   // border: 1px black dotted;
