session form css

--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -9,7 +9,7 @@ header, html, body, header, nav, h1, a,
 ul, li, strong, main, button, i,
 section, img, div, h2, p, form,
 fieldset, label, input, textarea,
-span, article, footer, time, small, table, tr, th {
+span, article, footer, time, small, table, tr, th, form {
   margin: 0;
   padding: 0;
   border: 0;
