--- a/app/assets/stylesheets/video_show.scss
+++ b/app/assets/stylesheets/video_show.scss
@@ -2,6 +2,8 @@
   display: flex;
   top: 25px;
   position: relative;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .video-container {
@@ -11,6 +13,7 @@
   margin-left: 25px;
   width: 60vw;
   height: 1200px;
+  max-width: 1280px;
 
   border: 1px green dotted;
 
@@ -18,14 +21,13 @@
 
 .video-clip-container {
   width: 100%;
-  height: 450px;
-
-  border: 1px red dotted;
+  max-height: 720px;
+  // border: 1px red dotted;
 }
 
 .video-description-container {
   margin-top: 25px;
-  height: 250px;
+  height: 230px;
 
   border: 1px yellow dotted;
 }
@@ -38,7 +40,11 @@
 }
 
 .comments-form {
-  // height: 
+ 
+}
+
+.show-vid {
+  max-height: 720px;
 }
 
 .next-video-index-container {
@@ -46,8 +52,121 @@
   height: 800px;
   margin-left: 25px;
 
-
-  border: 1px pink dotted;
+  // border: 1px pink dotted;
 
 }
 
+.show-video-item-container {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 15px;
+}
+
+.show-thumbnails {
+  width: 190px;
+}
+
+.show-index-video-description {
+  display: flex;
+  flex-direction: column;
+  padding-left: 5px;
+  transform: translateY(-8px);
+}
+
+.show-video-clip-title {
+  font-size: 22px;
+}
+
+.sub-title-descriptions-container {
+  display: flex;
+  height: 50px;
+  justify-content: space-between;
+  align-items: center;
+  // border: 1px pink dotted;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+}
+
+.show-views-counter {
+
+  // border: 1px orange dotted;
+}
+
+.likes-view-counter-container {
+
+  // border: 1px white dotted;
+}
+
+.likes-view-counter {
+
+  // border: 1px green dotted;
+}
+
+.sub-views-description-container {
+  display: flex;
+  flex-direction: row;
+  height: 150px;
+  // border: 1px red dotted;
+
+}
+
+.show-video-icon-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 150px;
+  width: 70px;
+  border: 1px green dotted;  
+}
+
+.video-show-faIcons {
+  padding-top: 10px;
+  font-size: 50px;
+}
+
+.show-video-author-description-container {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  // border: 1px orange dotted;
+
+}
+
+.show-video-author-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 50px;
+  width: 100%;
+  // border: 1px green dotted;
+}
+
+.show-video-author-container-items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 50px;
+  width: 50%; 
+  // border: 1px rgb(0, 255, 213) dotted;
+}
+
+.show-video-author {
+  
+  // border: 1px orange dotted;
+}
+
+.show-video-published {
+  font-size: 10px;
+  // border: 1px orange dotted;
+}
+
+.show-video-subscribe {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  // border: 1px orange dotted;
+}
+
+.show-video-description {
+  width: 80%;
+  // border: 1px rgb(212, 0, 255) dotted;
+}
