--- a/app/assets/stylesheets/user_menu.scss
+++ b/app/assets/stylesheets/user_menu.scss
@@ -44,6 +44,8 @@
   padding-top: 10px;
   left: 20px;
   font-size: 1px;
+  margin-right: 0;
+  padding-right: 0;
   // border: 1px white dotted
 }
 
