Comments front/backend before components render

--- a/app/assets/stylesheets/video_show.scss
+++ b/app/assets/stylesheets/video_show.scss
@@ -15,7 +15,7 @@
   height: 1200px;
   max-width: 1280px;
 
-  border: 1px green dotted;
+  // border: 1px green dotted;
 
 }
 
@@ -29,14 +29,14 @@
   margin-top: 25px;
   height: 230px;
 
-  border: 1px yellow dotted;
+  // border: 1px yellow dotted;
 }
 
 .comments-container {
   margin-top: 25px;
   height: 600px;
 
-  border: 1px blue dotted
+  // border: 1px blue dotted
 }
 
 .comments-form {
@@ -115,7 +115,7 @@
   align-items: center;
   height: 150px;
   width: 70px;
-  border: 1px green dotted;  
+  // border: 1px green dotted;  
 }
 
 .video-show-faIcons {
