--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,14 +1,14 @@
 .comment-form-container {
   display: flex;
   flex-direction: column;
-  border: 1px red dotted;
+  // border: 1px red dotted;
   width: 100%;
   height: 175px;
 }
 
 .comment-count-container {
   display: flex;
-  border: 1px green dotted;
+  // border: 1px green dotted;
   width: 100%;
   height: 50px;
 }
@@ -16,13 +16,13 @@
 .comment-counter {
   display: flex;
   align-items: center;
-  border: 1px blue dotted;
+  // border: 1px blue dotted;
   width: 150px;
   height: 100%;
 }
 
 .comment-sort-container {
-  border: 1px orange dotted;
+  // border: 1px orange dotted;
   width: 150px;
   height: 100%;
 }
@@ -33,11 +33,11 @@
   height: 110px;
   width: 100%;
   margin-top: 10px;
-  border: 1px yellow dotted; 
+  // border: 1px yellow dotted; 
 }
 
 .comment-form-icon-container {
-  border: 1px teal dotted;
+  // border: 1px teal dotted;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,7 +50,7 @@
   flex-direction: column;
   height: 100%;
   width: 100%;
-  border: 1px rgb(7, 0, 112) dotted;
+  // border: 1px rgb(7, 0, 112) dotted;
 }
 
 .comment-form-item {
@@ -107,7 +107,7 @@
 }
 
 .comments-index-item-icon-container {
-  border: 1px orange dotted;
+  // border: 1px orange dotted;
   display: flex;
   flex-direction: column;
   align-items: center;
