Heroku comments commit

--- a/app/assets/stylesheets/video_show.scss
+++ b/app/assets/stylesheets/video_show.scss
@@ -15,7 +15,7 @@
   height: 1200px;
   max-width: 1280px;
 
-  border: 1px green dotted;
+  // border: 1px green dotted;
 
 }
 
@@ -29,7 +29,7 @@
   margin-top: 25px;
   height: 200px;
 
-  border: 1px yellow dotted;
+  // border: 1px yellow dotted;
 }
 
 .show-vid {
@@ -104,7 +104,7 @@
   align-items: center;
   height: 150px;
   width: 70px;
-  border: 1px green dotted;  
+  // border: 1px green dotted;  
 }
 
 .video-show-faIcons {
@@ -160,11 +160,4 @@
   padding-top: 10px;
   width: 80%;
   // border: 1px rgb(212, 0, 255) dotted;
-}
-
-.comments-container {
-  margin-top: 25px;
-  height: 600px;
-
-  border: 1px blue dotted
 }
