--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,3 +1,11 @@
+.comments-container {
+  margin-top: 25px;
+  height: 600px;
+
+  // border: 1px blue dotted
+}
+
+
 .comment-form-container {
   display: flex;
   flex-direction: column;
@@ -103,7 +111,7 @@
   width: 100%;
   height: 150px;
   margin-top: 25px;
-  border: 1px teal dotted;
+  // border: 1px teal dotted;
 }
 
 .comments-index-item-icon-container {
@@ -127,7 +135,7 @@
 
   width: 90%;
 
-  border: 1px red dotted
+  // border: 1px red dotted
 }
 
 .comments-item-name-container {
