--- a/app/assets/stylesheets/video_form.scss
+++ b/app/assets/stylesheets/video_form.scss
@@ -27,7 +27,8 @@
   align-items: center;
   justify-content: center;
 
-  // border: 1px green dotted;
+  border: 1px green dotted;
+  // opacity: 0;
 }
 
 .video-submit-button {
@@ -36,6 +37,12 @@
   align-items: center;
   justify-content: center;
   color: white
+}
+
+.video-submit-input:hover {
+  cursor: pointer;
+  color : #a4a4a4;
+
 }
 
 .video-submit-input {
@@ -48,6 +55,7 @@
 .faIcons-upload {
   font-size: 100px;
   padding-bottom: 20px;
+  z-index: 2000;
 }
 
 .video-form-header1 {
@@ -62,6 +70,7 @@
 .faIcons-upload:hover {
   // color: rgb(44, 0, 0);
   color : #a4a4a4;
+  cursor: pointer;
 }
 
 .video-form-header1:hover {
@@ -96,6 +105,7 @@
 
 .help-subtext#important-text {
   color: red;
+  font-size: 14px;
 }
 
 
@@ -104,9 +114,205 @@
   // display: hidden;
   // visibility: hidden;
   opacity: 0;
-
   transform: translateY(-113px);
   height: 200px;
   width: 250px;
-  // border: 1px red solid
+  border: 1px red dotted
+}
+
+.new-form-container {
+  display: flex;
+  height: 380px;
+  width: 750px;
+  // border: 1px white dotted;
+  transform: translateY(10px);
+  z-index: 1000;
+}
+
+.nonexist {
+  display: none;
+  opacity: 0;
+  font-size: 0;
+}
+
+.hide-in-corner {
+  border: 1px yellow dotted;
+  height: 0px;
+  width: 0px;
+  opacity: 0;
+  font-size: 0;
+}
+
+.new-form-header {
+  font-size: 16px;
+}
+
+.new-form-inputs-containers {
+  display: flex;
+  margin: 40px;
+  width: 60%;
+  flex-direction: column;
+  
+  // border: 1px yellow dotted;
+}
+
+// .new-form-title-text {
+
+// }
+
+.new-form-title-input {
+  // background-color : #d1d1d1;
+  // background-color: white;
+  // height: 30px;
+  // width: 60px;
+  transform: translateY(30px);
+  background-color : #d1d1d1;
+  color: black;
+  height: 50px;
+  width: 90%;
+  border-radius: 3px;
+  border: white 2px solid;
+  font-size: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.new-form-description-textarea {
+  // background-color : #d1d1d1;
+  // background-color: white;
+  // height: 30px;
+  // width: 60px;
+  transform: translateY(60px);
+  background-color : #d1d1d1;
+  color: black;
+  height: 100px;
+  width: 90%;
+  border-radius: 3px;
+  border: white 2px solid;
+  font-size: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+}
+
+// .new-form-description-text {
+
+// }
+
+
+.new-form-thumb-video-containers {
+  display: flex;
+  width: 40%;
+  flex-direction: column;
+  margin: 20px 0px 20px 20px;
+  
+  // border: 1px green dotted;
+}
+
+.new-form-thumbnail-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  // height: auto;
+  height: 50%;
+
+  // border: 1px yellow dotted
+}
+
+.new-form-video-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  // height: auto;
+  height: 50%;
+  border: 1px white dotted
+}
+
+.new-form-submit {
+  background-color: white;
+  border: 1px solid #121212;
+  border-radius: 5px;
+  color: #121212;
+  padding: 5px 10px;
+  font-size: 16px;
+  width: 70px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  z-index: 1000;
+  margin-right: 10px;
+}
+
+.new-form-submit:hover {
+  background-color: #a4a4a4;
+}
+
+.new-form-submit-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  // border: 1px brown dotted;
+  transform: translateY(80px);
+}
+
+.new-form-thumbnail-container-preview {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  // transform: translateX(105px);
+  height: 169px;
+  width: 302px;
+  // border: 1px blue dotted;
+}
+
+.new-form-thumbnail-container-input {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transform: translateX(105px);
+  height: 169px;
+  width: 302px;
+  border: 1px blue dotted;
+}
+
+.new-form-thumb-icon {
+  font-size: 80px;
+  transform: translateX(-105px);
+  border: 1px orange dotted
+}
+
+.thumbnail-input {
+  opacity: 0;
+  transform: translateX(-52px);
+  height: 169px;
+  width: 302px;
+  border: 1px green dotted;
+}
+
+.thumbnail-input:hover {
+  cursor: pointer;
+}
+
+.new-form-thumb-text1 {
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+  width: 200px;
+}
+
+.new-form-thumb-text2 {
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+  width: 200px;
+}
+
+.thumbnail-preview-item {
+  width: 100px;
+  height: auto;
 }
