--- a/frontend/reset.css
+++ b/frontend/reset.css
@@ -41,6 +41,7 @@ input[type="password"],
 input[type="email"],
 input[type="text"],
 input[type="submit"],
+input[type="file"],
 textarea,
 button {
 
