--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -51,6 +51,7 @@ img#logo {
 .header-search-container {
   display: flex;
   width: 50%;
+  transform: translateX(-20px);
   height: 30px;
   // border: 1px white dotted;
 }
