--- a/app/assets/stylesheets/video_index.scss
+++ b/app/assets/stylesheets/video_index.scss
@@ -14,7 +14,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  // padding-left: 100px;
+  padding-left: 220px;
   // position: relative;
   // top: 20px;
   // left: 10%;
@@ -81,7 +81,10 @@ img.thumbnails {
 }
 
 .index-video-title-text {
-
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .index-video-author-text {
