--- a/app/assets/stylesheets/video_show.scss
+++ b/app/assets/stylesheets/video_show.scss
@@ -10,9 +10,10 @@
   display: flex;
   flex-direction: column;
 
-  margin-left: 25px;
+  // margin-left: 25px;
   width: 60vw;
-  height: 1200px;
+  // height: 720px;
+  max-height: 1200px;
   max-width: 1280px;
 
   // border: 1px green dotted;
@@ -21,7 +22,8 @@
 
 .video-clip-container {
   width: 100%;
-  max-height: 720px;
+  // height: 720px;
+  height: 560px;
   // border: 1px red dotted;
 }
 
@@ -38,7 +40,7 @@
 
 .next-video-index-container {
   width: 400px;
-  height: 800px;
+  height: 100%;
   margin-left: 25px;
 
   // border: 1px pink dotted;
@@ -48,11 +50,11 @@
 .show-video-item-container {
   display: flex;
   flex-direction: row;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
 }
 
 .show-thumbnails {
-  width: 190px;
+  width: 168px;
 }
 
 .show-index-video-description {
@@ -60,6 +62,8 @@
   flex-direction: column;
   padding-left: 5px;
   transform: translateY(-8px);
+  height: 100px;
+  
 }
 
 .show-video-clip-title {
@@ -72,7 +76,7 @@
   justify-content: space-between;
   align-items: center;
   // border: 1px pink dotted;
-  // border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+  border-bottom: 0.5px solid rgba(255, 255, 255, 0.3);
 }
 
 .show-views-counter {
@@ -93,16 +97,16 @@
 .sub-views-description-container {
   display: flex;
   flex-direction: row;
-  height: 150px;
+  height: 140px;
   // border: 1px red dotted;
-
+  border-bottom: 0.5px solid rgba(255, 255, 255, 0.3);
 }
 
 .show-video-icon-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 150px;
+  height: 140px;
   width: 70px;
   // border: 1px green dotted;  
 }
