--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -3,14 +3,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: f;
-  padding-left: 250px;
+  padding-left: 220px;
   // position: relative;
   // top: 20px;
   // left: 10%;
   // right: 1%;
   // width: 80%;
-  width: 80vw;
-  // border: 1px green dotted;
+  width: 100vw;
+  border: 1px green dotted;
   // width: 80%;
   // max-width: 1240px;
   // margin-right: 10000px;
@@ -22,11 +22,28 @@
   flex-direction: row;
   // margin-bottom: 10px;
   padding-bottom: 10px;
-  // border: 1px orange dotted;
+  border: 1px orange dotted;
+  width: 90%;
+  // height: 
+}
+
+.show-index-video-description {
+  display: flex;
+  flex-direction: column;
+  padding-left: 5px;
+  transform: translateY(-10px);
+  height: 100%;
+}
+
+.search-show-thumbnails {
+  width: 180px;
+  // height: 120px;
 }
 
 .search-index-preview-container {
   padding-right: 20px;
+  height: 180px;
+  // height: 100%;
 }
 
 .search-video-info {
