Implemented vid/comment likes/dislikes. no autorefresh

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -62,7 +62,7 @@ img#logo {
   align-items: center;
   padding-left: 10px;
   background-color: #121212;
-
+  font-size: 14px;
   width: 90%;
   height: 30px;
   border: 1px white solid;
