--- a/app/assets/stylesheets/video_index.scss
+++ b/app/assets/stylesheets/video_index.scss
@@ -74,6 +74,8 @@ img.thumbnails {
   font-size: 12px;
   padding-top: 2px;
   padding-bottom: 15px;
+  color: rgb(139, 139, 139);
+
 }
 
 .index-video-title {
@@ -96,13 +98,15 @@ img.thumbnails {
 
 .index-video-views {
   color: rgb(139, 139, 139);
-  padding-right: 10px;
+  padding-right: 5px;
+  font-size: 12px;
 
 }
 
 .index-video-upload-date {
   color: rgb(139, 139, 139);
-
+  padding-left: 5px;
+  font-size: 12px;
 }
 
 .index-video-title:hover {
