--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -10,7 +10,7 @@
   // right: 1%;
   // width: 80%;
   width: 100vw;
-  border: 1px green dotted;
+  // border: 1px green dotted;
   // width: 80%;
   // max-width: 1240px;
   // margin-right: 10000px;
@@ -22,7 +22,7 @@
   flex-direction: row;
   // margin-bottom: 10px;
   padding-bottom: 10px;
-  border: 1px orange dotted;
+  // border: 1px orange dotted;
   width: 90%;
   // height: 
 }
