--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -62,6 +62,14 @@
   // border: 1px rgb(7, 0, 112) dotted;
 }
 
+.nested-comment-form-item-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
 .comment-form-item {
   height: 40%;
   width: 100%;
@@ -92,7 +100,7 @@
 
   border-radius: 3px;
   padding: 8px 15px;
-  font-size: 16px;
+  font-size: 13px;
   width: 70px;
   // margin-bottom: 10px;
   transform: translateY(50px);
@@ -187,6 +195,8 @@
 
 .view-replies-text {
   font-size: 14px;
+  width: auto;
+  margin-top: 10px;
 }
 
 .comment-item-faIcons {
