--- a/app/assets/stylesheets/video_show.scss
+++ b/app/assets/stylesheets/video_show.scss
@@ -134,7 +134,7 @@
 .show-video-author-description-container {
   display: flex;
   flex-direction: column;
-  width: 90%;
+  width: 100%;
   // border: 1px orange dotted;
 
 }
@@ -172,6 +172,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  transform: translateY(10px);
   // border: 1px orange dotted;
 }
 
@@ -208,4 +210,25 @@
 
 .highlighted {
   color: white;
+}
+
+.sub-btn {
+  background-color: #4e4e4e;
+  color: #121212;
+  
+  border-radius: 3px;
+  padding: 8px 12px;
+  font-size: 13px;
+  width: 70px;
+  // margin-bottom: 10px;
+  // transform: translate(30px, 20px);
+  // transform: translateY(20px);
+  // transform: translateX(30px);
+  display: flex;
+  justify-content: center;
+}
+
+.sub-btn:hover {
+  cursor: pointer;
+  background-color: #707070;
 }
