Seeded with real videos

--- a/app/assets/stylesheets/api/channel.scss
+++ b/app/assets/stylesheets/api/channel.scss
@@ -19,7 +19,7 @@
 
 .header-banner {
   display: flex;
-  position: relative;
+  // position: relative;
   flex-direction: column;
   align-items: center;
   // top: 0px;
