--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -54,7 +54,7 @@ img#logo {
   width: 50%;
   transform: translateX(-20px);
   height: 30px;
-  border: 1px green dotted;
+  // border: 1px green dotted;
 }
 
 .header-search-bar {
