--- a/app/assets/stylesheets/api/channel.scss
+++ b/app/assets/stylesheets/api/channel.scss
@@ -5,8 +5,8 @@
   top: 30px;
   width: 100vw;
   // height: 100vw;
-  height: 100%
-  // border: 1x yellow dotted;
+  height: 100%;
+  border: 1x yellow dotted;
 }
 
 .header-image {
@@ -81,9 +81,9 @@
   flex-direction: column;
   position: relative;
   // justify-content: flex-start;
-  align-items: flex-start;
   background-color: #272727;  
   width: 750px;
+  flex-wrap: wrap;
   // height: 380px;
   // height: 100%;
   height: 80%;
@@ -94,6 +94,8 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  flex-wrap: wrap;
+
 }
 
 .banner-user-info {
