--- a/app/assets/stylesheets/video_show.scss
+++ b/app/assets/stylesheets/video_show.scss
@@ -13,8 +13,8 @@
   // margin-left: 25px;
   width: 60vw;
   // height: 720px;
-  max-height: 1200px;
-  max-width: 1280px;
+  // max-height: 1200px;
+  // max-width: 1280px;
 
   // border: 1px green dotted;
 
@@ -23,8 +23,14 @@
 .video-clip-container {
   width: 100%;
   // height: 720px;
-  height: 560px;
+  height: auto;
+  // height: 560px;
   // border: 1px red dotted;
+}
+
+.video-clip {
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .video-description-container {
