--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
 
     <%= stylesheet_link_tag    'application'%>
     <%= javascript_include_tag 'application'%>
+
+    <%= favicon_link_tag asset_path('favicon.jpg') %>
+    
   </head>
 
   <body>
