heroku commit w/ favicon

--- a/app/assets/stylesheets/api/channel.scss
+++ b/app/assets/stylesheets/api/channel.scss
@@ -133,6 +133,8 @@
   height: 50px;
   width: 50px;
   z-index: 1000;
+  border: 2px white solid;
+
 }
 
 .user-icon-header {
@@ -140,6 +142,7 @@
   height: 40px;
   width: 40px;
   z-index: 1000;
+  border: 2px white solid;
 }
 
 .user-icon-video-show {
@@ -148,6 +151,8 @@
   height: 50px;
   width: 50px;
   z-index: 1000;
+  border: 2px white solid;
+
 }
 
 .user-icon-drop-menu {
@@ -156,6 +161,8 @@
   height: 50px;
   width: 50px;
   z-index: 1000;
+  border: 2px white solid;
+
 }
 
 .user-icon-channel {
@@ -163,4 +170,6 @@
   height: 75px;
   width: 75px;
   z-index: 1000;
+  border: 2px white solid;
+
 }
