--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= stylesheet_link_tag    'application'%>
     <%= javascript_include_tag 'application'%>
 
-    <%= favicon_link_tag asset_path('favicon.jpg') %>
+    <%= favicon_link_tag asset_path('favicon.png') %>
     
   </head>
 
