Video form thumbnail fix

--- a/app/assets/stylesheets/video_form.scss
+++ b/app/assets/stylesheets/video_form.scss
@@ -317,8 +317,8 @@
 }
 
 .thumbnail-preview-item {
-  width: 100px;
-  height: auto;
+  width: 100%;
+  height: 100%;
 }
 
 .new-form-thumb-text-container {
