--- a/app/assets/stylesheets/video_show.scss
+++ b/app/assets/stylesheets/video_show.scss
@@ -232,6 +232,23 @@
   // transform: translateX(30px);
   display: flex;
   justify-content: center;
+  margin-bottom: 10px;
+}
+
+.sub-delete-btn {
+  background-color: #4e4e4e;
+  color: #121212;
+  
+  border-radius: 3px;
+  padding: 8px 12px;
+  font-size: 13px;
+  width: 70px;
+  // margin-bottom: 10px;
+  // transform: translate(30px, 20px);
+  // transform: translateY(20px);
+  // transform: translateX(30px);
+  display: flex;
+  justify-content: center;
 }
 
 .sub-btn:hover {
